Mentre stavo cercando di procedere con il metodo fine turno nella gilda mi sono resa conto che forse aveva piu senso creare un interfaccia che gestisse i turni, così da creare un progetto che sia più facile da modificare in futuro, quindi ho creato l'interfaccia gestore turno, mi sono poi resa conto però che la classe eroe doveva gestire troppe cose, rendendo complicati futuri cambiamenti ho così creato un interfaccia strategy per gestire gli stipendi e gli avanzamenti di livello degli eroi, cambiando di conseguenza anche le altre classi collegate, concluso il metodo termina turno su gestione eroi